--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,10 @@ dependencies = [
     "torch>=2.0.0",
     "numpy>=1.26.0",
     "typing-extensions>=4.0.0",
+    "pytest>=8.4.2",
+    "pip>=25.3",
+    "thop>=0.1.1.post2209072238",
+    "torchvision>=0.22.1",
 ]
 requires-python = ">=3.9"
 readme = "README.md"
