Code formatting: Black + isort Linting: flake8 + mypy Security: bandit + safety Coverage: pytest-cov with HTML/XML reports Documentation: interrogate for docstring coverage

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ Documentation = "https://rankme.readthedocs.io"
 [project.optional-dependencies]
 dev = [
     "pytest>=7.0.0",
-    "pytest-cov>=4.0.0",
+    "pytest-cov>=7.0.0",
     "black>=23.0.0",
     "isort>=5.0.0",
     "flake8>=6.0.0",
@@ -121,6 +121,10 @@ testpaths = ["tests"]
 python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
+markers = [
+    "benchmark: marks tests as performance benchmarks (requires pytest-benchmark)",
+    "slow: marks tests as slow running"
+]
 addopts = [
     "-v",
     "--tb=short",
@@ -149,3 +153,10 @@ exclude_lines = [
     "class .*\\bProtocol\\):",
     "@(abc\\.)?abstractmethod",
 ]
+
+[tool.bandit]
+exclude_dirs = ["tests"]
+skips = ["B101", "B601"]
+
+[tool.bandit.assert_used]
+skips = ["*_test.py", "*test_*.py"]
