Add security tools to development dependencies and update Bandit skips
- Added `bandit[toml]` and `safety` to the development dependencies in `pyproject.toml`.
- Updated Bandit configuration to skip additional checks: `B110` (try-except-pass).

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,12 +99,12 @@ jobs:
 
     - name: Run bandit security check
       run: |
-        pdm run bandit -r rankme/ -f json -o bandit-report.json
+        pdm run bandit -r rankme/ -ll
       continue-on-error: true
 
     - name: Run safety check
       run: |
-        pdm run safety check
+        pdm run safety scan --json
       continue-on-error: true
 
   docs:
