--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -46,7 +46,7 @@ jobs:
     - name: Check for common security issues
       run: |
         pdm add -dG dev bandit[toml]
-        pdm run bandit -r rankme/
+        pdm run bandit -r rankme/ -ll
 
   pre-commit:
     name: Pre-commit hooks
