--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,8 @@ dev = [
     "flake8>=6.0.0",
     "mypy>=1.0.0",
     "pre-commit>=3.0.0",
+    "bandit[toml]>=1.8.6",
+    "safety>=3.7.0",
 ]
 docs = [
     "sphinx>=6.0.0",
@@ -156,7 +158,7 @@ exclude_lines = [
 
 [tool.bandit]
 exclude_dirs = ["tests"]
-skips = ["B101", "B601"]
+skips = ["B101", "B110", "B601"]  # Skip assert_used and try_except_pass
 
 [tool.bandit.assert_used]
 skips = ["*_test.py", "*test_*.py"]
