--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,16 +95,16 @@ jobs:
     - name: Install dependencies
       run: |
         pdm install -G dev
-        pdm add -dG dev bandit[toml] safety
 
     - name: Run bandit security check
       run: |
         pdm run bandit -r rankme/ -ll
       continue-on-error: true
 
-    - name: Run safety check
+    - name: Run safety check (local database)
       run: |
-        pdm run safety scan --json
+        # Use pip-audit for dependency vulnerability scanning
+        pdm run pip-audit --desc --format=json
       continue-on-error: true
 
   docs:
@@ -128,7 +128,7 @@ jobs:
 
     - name: Build documentation
       run: |
-        cd docs && pdm run sphinx-build -b html . _build/html
+        pdm run sphinx-build -b html docs docs/_build/html
       continue-on-error: true
 
     - name: Upload docs artifact
@@ -153,13 +153,18 @@ jobs:
     - name: Install PDM
       uses: pdm-project/setup-pdm@v4
 
-    - name: Install dependencies
+    - name: Install dependencies and build requirements
       run: |
         pdm install
 
     - name: Build package
       run: |
         pdm build
+
+    - name: Check built artifacts
+      run: |
+        ls -la dist/
+        pdm run python -c "import tarfile; t = tarfile.open('dist/rankme-0.1.0.tar.gz'); print(t.getnames()[:10])"
 
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
