--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,7 @@ dev = [
     "mypy>=1.0.0",
     "pre-commit>=3.0.0",
     "bandit[toml]>=1.8.6",
-    "safety>=3.7.0",
+    "pip-audit>=2.6.1",
 ]
 docs = [
     "sphinx>=6.0.0",
