--- a/pyproject.toml
+++ b/pyproject.toml
@@ -103,6 +103,19 @@ line_length = 88
 force_single_line = false
 known_first_party = ["rankme"]
 
+[tool.flake8]
+max-line-length = 88
+extend-ignore = ["E203", "W503", "F401", "F541", "F811", "F841", "E501"]
+exclude = [
+    ".git",
+    "__pycache__",
+    "build",
+    "dist",
+    ".eggs",
+    ".venv",
+    ".mypy_cache",
+]
+
 [tool.mypy]
 python_version = "3.9"
 warn_return_any = true
